# maritime-document-management

./: .env.example  .gitignore  PLAN.md  Procfile  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
backend/app/: config.py  db.py  deps.py  main.py  storage.py
backend/app/models/: auth.py  document.py  report.py  seafarer.py  vessel.py
backend/app/routers/: alerts.py  auth.py  documents.py  reports.py  seafarers.py  vessels.py
backend/app/services/: alert_service.py  document_service.py  expiry_service.py  notification_service.py  report_service.py  seafarer_service.py  vessel_service.py
backend/app/templates/: expiry_alert.html
backend/app/worker/: run_expiry_scan.py  scheduler.py
backend/tests/: conftest.py
backend/tests/e2e/: test_full_scenario.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: install-hooks.sh
supabase/: config.toml  seed.sql
supabase/migrations/: 20260622123130_init_extensions.sql  20260622123131_create_users_table.sql  20260622123132_create_vessel_table.sql  20260622123133_create_seafarer_table.sql  20260622123134_create_document_type_table.sql  20260622123135_create_document_table.sql  20260622123136_create_alert_table.sql  20260622123137_create_handle_new_user_trigger.sql  20260622123138_create_rls_policies.sql  20260622123139_create_composite_indexes.sql  20260622123140_create_storage_bucket.sql  20260622123141_create_alert_threshold_config.sql  20260623120000_add_valid_status.sql  20260623130000_alter_handle_new_user_owner.sql
(+43 files in other folders)
